# toolkit

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  justfile
.githooks/: pre-commit
.github/workflows/: release-private-tap.yml
agents/: architect.agent.md  engineer.agent.md  git-flow.agent.md
crates/common/: Cargo.toml
crates/common/src/: client.rs  config.rs  error.rs  errorlog.rs  guard.rs  key.rs  lib.rs  protocol.rs  sql.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: audit.rs  dispatch.rs  main.rs
crates/dbr/: Cargo.toml
crates/dbr/src/: dbr.rs  lib.rs  main.rs  oauth.rs
crates/libtoolkit/: Cargo.toml
crates/libtoolkit/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: catalog.rs  main.rs
crates/msql/: Cargo.toml
crates/msql/src/: lib.rs  main.rs  msql.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs  proxy.rs
crates/psql/: Cargo.toml
crates/psql/src/: lib.rs  main.rs  psql.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/: guard.rs  init.rs  main.rs  validate.rs
docs/: configuration.md  contributing.md  daemon.md  hooks.md  mcp.md  threat-model.md  usage.md
hooks/: README.md
hooks/claude-code/: bash-guard  read-guard  settings.snippet.json
hooks/opencode/: opencode.snippet.json
scripts/: generate_brew_formula.sh  setup-daemon.sh
skills/: README.md
skills/tkdbr/: SKILL.md
skills/tkmsql/: SKILL.md
skills/tkpsql/: SKILL.md
