[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
age = { version = "0.11", default-features = false }
secrecy = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3" }

[dev-dependencies]
tempfile = "3"
