[package]
name = "toolkit-daemon"
version = "0.2.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "toolkit-daemon"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tkpsql = { path = "../psql" }
tkmsql = { path = "../msql" }
tkdbr = { path = "../dbr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
libc = "0.2"
