[package]
name = "toolkit-daemon"
version = "0.4.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "toolkit-daemon"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
libtoolkit = { path = "../libtoolkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
libc = "0.2"
