[package]
name = "tkdbr"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tkdbr"
path = "src/main.rs"

[lib]
name = "tkdbr"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
