[package]
name = "libtoolkit"
version = "0.4.0"
edition = "2021"
license = "MIT"

[lib]
name = "libtoolkit"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
tkpsql = { path = "../psql" }
tkmsql = { path = "../msql" }
tkdbr = { path = "../dbr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
