[package]
name = "tkmsql"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tkmsql"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
hex = "0.4"
