[package]
name = "tkproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tkproxy"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
