[package]
name = "tkpsql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tkpsql"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
