[package]
name = "toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "toolkit"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
